_generated-doc/3.0/config/quarkus-kafka-streams-general-config-items.adoc

:summaryTableId: quarkus-kafka-streams-general-config-items
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kafka-streams-general-config-items_configuration]]link:#quarkus-kafka-streams-general-config-items_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.mechanism]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.mechanism[quarkus.kafka-streams.sasl.mechanism]`

[.description]
--
SASL mechanism used for client connections

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_MECHANISM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_MECHANISM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.jaas-config]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.jaas-config[quarkus.kafka-streams.sasl.jaas-config]`

[.description]
--
JAAS login context parameters for SASL connections in the format used by JAAS configuration files

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_JAAS_CONFIG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_JAAS_CONFIG+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.client-callback-handler-class]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.client-callback-handler-class[quarkus.kafka-streams.sasl.client-callback-handler-class]`

[.description]
--
The fully qualified name of a SASL client callback handler class

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_CLIENT_CALLBACK_HANDLER_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_CLIENT_CALLBACK_HANDLER_CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-callback-handler-class]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-callback-handler-class[quarkus.kafka-streams.sasl.login-callback-handler-class]`

[.description]
--
The fully qualified name of a SASL login callback handler class

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_CALLBACK_HANDLER_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_CALLBACK_HANDLER_CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-class]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-class[quarkus.kafka-streams.sasl.login-class]`

[.description]
--
The fully qualified name of a class that implements the Login interface

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-service-name]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-service-name[quarkus.kafka-streams.sasl.kerberos-service-name]`

[.description]
--
The Kerberos principal name that Kafka runs as

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_SERVICE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_SERVICE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-kinit-cmd]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-kinit-cmd[quarkus.kafka-streams.sasl.kerberos-kinit-cmd]`

[.description]
--
Kerberos kinit command path

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_KINIT_CMD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_KINIT_CMD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-ticket-renew-window-factor]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-ticket-renew-window-factor[quarkus.kafka-streams.sasl.kerberos-ticket-renew-window-factor]`

[.description]
--
Login thread will sleep until the specified window factor of time from last refresh

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_TICKET_RENEW_WINDOW_FACTOR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_TICKET_RENEW_WINDOW_FACTOR+++`
endif::add-copy-button-to-env-var[]
--|double 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-ticket-renew-jitter]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-ticket-renew-jitter[quarkus.kafka-streams.sasl.kerberos-ticket-renew-jitter]`

[.description]
--
Percentage of random jitter added to the renewal time

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_TICKET_RENEW_JITTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_TICKET_RENEW_JITTER+++`
endif::add-copy-button-to-env-var[]
--|double 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-min-time-before-relogin]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-min-time-before-relogin[quarkus.kafka-streams.sasl.kerberos-min-time-before-relogin]`

[.description]
--
Percentage of random jitter added to the renewal time

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_MIN_TIME_BEFORE_RELOGIN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_KERBEROS_MIN_TIME_BEFORE_RELOGIN+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-window-factor]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-window-factor[quarkus.kafka-streams.sasl.login-refresh-window-factor]`

[.description]
--
Login refresh thread will sleep until the specified window factor relative to the credential's lifetime has been reached-

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_WINDOW_FACTOR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_WINDOW_FACTOR+++`
endif::add-copy-button-to-env-var[]
--|double 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-window-jitter]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-window-jitter[quarkus.kafka-streams.sasl.login-refresh-window-jitter]`

[.description]
--
The maximum amount of random jitter relative to the credential's lifetime

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_WINDOW_JITTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_WINDOW_JITTER+++`
endif::add-copy-button-to-env-var[]
--|double 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-min-period]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-min-period[quarkus.kafka-streams.sasl.login-refresh-min-period]`

[.description]
--
The desired minimum duration for the login refresh thread to wait before refreshing a credential

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_MIN_PERIOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_MIN_PERIOD+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-buffer]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-buffer[quarkus.kafka-streams.sasl.login-refresh-buffer]`

[.description]
--
The amount of buffer duration before credential expiration to maintain when refreshing a credential

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_BUFFER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SASL_LOGIN_REFRESH_BUFFER+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.protocol]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.protocol[quarkus.kafka-streams.ssl.protocol]`

[.description]
--
The SSL protocol used to generate the SSLContext

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_PROTOCOL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.provider]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.provider[quarkus.kafka-streams.ssl.provider]`

[.description]
--
The name of the security provider used for SSL connections

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.cipher-suites]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.cipher-suites[quarkus.kafka-streams.ssl.cipher-suites]`

[.description]
--
A list of cipher suites

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_CIPHER_SUITES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_CIPHER_SUITES+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.enabled-protocols]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.enabled-protocols[quarkus.kafka-streams.ssl.enabled-protocols]`

[.description]
--
The list of protocols enabled for SSL connections

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_ENABLED_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_ENABLED_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.type]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.type[quarkus.kafka-streams.ssl.truststore.type]`

[.description]
--
Trust store type

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_TRUSTSTORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_TRUSTSTORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.location]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.location[quarkus.kafka-streams.ssl.truststore.location]`

[.description]
--
Trust store location

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_TRUSTSTORE_LOCATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_TRUSTSTORE_LOCATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.password]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.password[quarkus.kafka-streams.ssl.truststore.password]`

[.description]
--
Trust store password

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_TRUSTSTORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_TRUSTSTORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.certificates]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.certificates[quarkus.kafka-streams.ssl.truststore.certificates]`

[.description]
--
Trust store certificates

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_TRUSTSTORE_CERTIFICATES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_TRUSTSTORE_CERTIFICATES+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.type]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.type[quarkus.kafka-streams.ssl.keystore.type]`

[.description]
--
Key store type

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.location]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.location[quarkus.kafka-streams.ssl.keystore.location]`

[.description]
--
Key store location

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_LOCATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_LOCATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.password]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.password[quarkus.kafka-streams.ssl.keystore.password]`

[.description]
--
Key store password

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.key]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.key[quarkus.kafka-streams.ssl.keystore.key]`

[.description]
--
Key store private key

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.certificate-chain]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.certificate-chain[quarkus.kafka-streams.ssl.keystore.certificate-chain]`

[.description]
--
Key store certificate chain

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_CERTIFICATE_CHAIN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_CERTIFICATE_CHAIN+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.key.password]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.key.password[quarkus.kafka-streams.ssl.key.password]`

[.description]
--
Password of the private key in the key store

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_KEY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_KEY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keymanager-algorithm]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keymanager-algorithm[quarkus.kafka-streams.ssl.keymanager-algorithm]`

[.description]
--
The algorithm used by key manager factory for SSL connections

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_KEYMANAGER_ALGORITHM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_KEYMANAGER_ALGORITHM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.trustmanager-algorithm]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.trustmanager-algorithm[quarkus.kafka-streams.ssl.trustmanager-algorithm]`

[.description]
--
The algorithm used by trust manager factory for SSL connections

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_TRUSTMANAGER_ALGORITHM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_TRUSTMANAGER_ALGORITHM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.endpoint-identification-algorithm]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.endpoint-identification-algorithm[quarkus.kafka-streams.ssl.endpoint-identification-algorithm]`

[.description]
--
The endpoint identification algorithm to validate server hostname using server certificate

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM+++`
endif::add-copy-button-to-env-var[]
--|string 
|`https`


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.secure-random-implementation]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.secure-random-implementation[quarkus.kafka-streams.ssl.secure-random-implementation]`

[.description]
--
The SecureRandom PRNG implementation to use for SSL cryptography operations

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_SECURE_RANDOM_IMPLEMENTATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_SECURE_RANDOM_IMPLEMENTATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
